codepkg/objects/NEmployee__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>NDepartment__c</referenceTo>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Manager__c</fullName>
        <label>Email Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <defaultValue>&quot;NoFirstName&quot;</defaultValue>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>NEmployee__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NEmployee__c</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_Name__c</fullName>
        <label>Office Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Junior</fullName>
                    <default>true</default>
                    <label>Junior</label>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Chief</fullName>
                </value>
                <value>
                    <fullName>System Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <formula>Salary__c*0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>EmployeeN</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cloud</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>FirstName__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cloud</label>
    </listViews>
    <listViews>
        <fullName>Java</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>FirstName__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>Java</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>Developer</fullName>
        <active>true</active>
        <label>Developer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manager</fullName>
        <active>true</active>
        <label>Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>QA</fullName>
        <active>true</active>
        <label>QA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MaxPossibleSalary</fullName>
        <active>true</active>
        <errorConditionFormula>Salary__c &gt; 5000</errorConditionFormula>
        <errorMessage>Error max salary!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MinSalaryRule</fullName>
        <active>true</active>
        <errorConditionFormula>Salary__c   &lt; 300</errorConditionFormula>
        <errorMessage>Salary error!</errorMessage>
    </validationRules>
</CustomObject>